--- a/index.html
+++ b/index.html
@@ -8,27 +8,36 @@
 </head>
 <body>
     <div class="container">
-        <h1>Surpresa, Amor!</h1>
-        <p>Você é a razão do meu sorriso. 💖</p>
-        <img src="https://via.placeholder.com/300" alt="Imagem Romântica" class="image">
-        <button id="revealButton">Clique para uma surpresa!</button>
+        <h1>Surpresinha Amore</h1>
+        <p>Você é a razão do meu sorriso, gatinha. 💖</p>
+        <img src="https://i.ibb.co/35qmJrV4/image.png" alt="Imagem Romântica" class="image">
+        <button id="revealButton">Clica pra surpresa, mo</button>
         <div id="surprise" class="hidden">
-            <p>Eu te amo muito! ❤️</p>
-            <img src="https://via.placeholder.com/300/FF69B4/FFFFFF?text=Te+Amo" alt="Te Amo" class="image">
+            <p>Eu te amo muito, princesa ❤️</p>
+            <img src="https://i.ibb.co/n8LTZnCw/Image-2.jpg" alt="Te Amo" class="image">
         </div>
 
         <div id="dateIdea" class="hidden">
-            <h2>Qual ideia de date você prefere?</h2>
+            <h2>Ideia de datezinho, amo</h2>
             <button class="dateButton" onclick="chooseDate('Jantar')">Jantar</button>
             <button class="dateButton" onclick="chooseDate('Filminho')">Filminho</button>
             <button class="dateButton" onclick="chooseDate('Sair para fazer algo')">Sair para fazer algo</button>
         </div>
 
         <div class="loveMessage">
-            <img src="https://i.ibb.co/zVk946q/image.png" alt="Foto de Nós" class="loveImage">
-            <div class="messageText">
-                <p>Amor, vivo falando para você que você chegou na minha vida rápido e que mudou muita coisa. Vivo falando porque é a mais pura verdade. Desde que a gente começou a conversar, minha mãe e meus amigos notaram que eu estava mais feliz e que minha vida não era mais só ficar no meu quarto jogando com meus amigos, e sim agora eu tinha uma mulher pra cuidar, amar e principalmente construir uma família. Então sim, amor, eu não vou me cansar de te dizer o quanto te amo. Sim, amor, eu não vou me cansar de criar sites bobinhos pra te tirar um sorriso, até porque meu objetivo sempre foi tentar tirar um sorriso seu pra que você se apaixonasse por mim, mas acabou que a cada sorriso seu quem se derretia mais ainda por você era eu. Eu te amo, gata, e quero que saiba que, independente das brigas, independente de tudo que tiver acontecendo em nossas vidas, prometo estar junto de você na felicidade e na tristeza. Já já te peço em casamento, tá bom? Fica esperta.</p>
+            <div class="loveContent">
+                <div class="messageText">
+                    <p>Amor, vivo falando para você que você chegou na minha vida rápido e que mudou muita coisa. Vivo falando porque é a mais pura verdade. Desde que a gente começou a conversar, minha mãe e meus amigos notaram que eu estava mais feliz e que minha vida não era mais só ficar no meu quarto jogando com meus amigos, e sim agora eu tinha uma mulher pra cuidar, amar e principalmente construir uma família. Então sim, amor, eu não vou me cansar de te dizer o quanto te amo. Sim, amor, eu não vou me cansar de criar sites bobinhos pra te tirar um sorriso, até porque meu objetivo sempre foi tentar tirar um sorriso seu pra que você se apaixonasse por mim, mas acabou que a cada sorriso seu quem se derretia mais ainda por você era eu. Eu te amo, gata, e quero que saiba que, independente das brigas, independente de tudo que tiver acontecendo em nossas vidas, prometo estar junto de você na felicidade e na tristeza. Já já te peço em casamento, tá bom? Fica esperta.</p>
+                </div>
+                <img src="https://i.ibb.co/MkXwCBFD/Image-3.jpg" alt="Foto de Nós" class="loveImage">
             </div>
+        </div>
+
+        <!-- Nova seção de músicas do Spotify -->
+        <div class="musicSection">
+            <h2>Minhas Músicas que lembram voce amor</h2>
+            <iframe src="https://open.spotify.com/track/1RPrzKZdkzCNV0Ux0xEHg2?si=v3kPiZl3SNeeLpL1wNpffw" width="250" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe src="https://open.spotify.com/track/5xWH8iqeI9if3hPzAtrf1n?si=lmo7fVGBQh-13Zajj_4ErQ" width="250" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
     </div>
     <script src="script.js"></script>
