--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
         <!-- Nova seção de músicas do Spotify -->
         <div class="musicSection">
             <h2>Minhas Músicas que lembram voce amor</h2>
-            <iframe src="https://open.spotify.com/track/1RPrzKZdkzCNV0Ux0xEHg2?si=v3kPiZl3SNeeLpL1wNpffw" width="250" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            <iframe src="https://open.spotify.com/track/5xWH8iqeI9if3hPzAtrf1n?si=lmo7fVGBQh-13Zajj_4ErQ" width="250" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <a href="https://open.spotify.com/track/1RPrzKZdkzCNV0Ux0xEHg2" target="_blank">
+                <img src="https://i.ibb.co/Y4zb880G/images-removebg-preview.png" alt="Música 1" class="musicIcon">
+            </a>
+            <!-- Link 2 -->
+            <a href="https://open.spotify.com/track/5xWH8iqeI9if3hPzAtrf1n" target="_blank">
+                <img src="https://i.ibb.co/Y4zb880G/images-removebg-preview.png" alt="Música 2" class="musicIcon">
+            </a>
+
         </div>
     </div>
     <script src="script.js"></script>
